--- a/Delay_Blind_approach-Scenario_I.ipynb
+++ b/Delay_Blind_approach-Scenario_I.ipynb
@@ -15,7 +15,7 @@
     "**Note**: the training might take some hours, depending on the available computational resources, the dimension of the training set, the dimension of the network, and the number of epochs. \n",
     "\n",
     "\n",
-    "<a id='ourpaper'></a> [1] \"Wireless link adaptation - a hybrid data-driven and model-based approach\", Lissy Pellaco, Vidit Saxena, Mats Bengtsson, Joakim Jaldén. Submitted to WCNC 2020."
+    "<a id='ourpaper'></a> [1] \"Wireless link adaptation - a hybrid data-driven and model-based approach\", Lissy Pellaco, Vidit Saxena, Mats Bengtsson, Joakim Jaldén. Submitted to SPAWC 2020."
    ]
   },
   {
@@ -101,6 +101,7 @@
     "# The files stored in the file_set ARE NOT in the repository due to space limitations.\n",
     "# The training datasets can be found at: https://kth.box.com/s/tcd7y7rg3yau75kctw3regmyns8kfkr6 in the folder *Datasets*\n",
     "# The reader has also access to the \"radio_data/Generate_Data.ipynb\" which we used to generate the training datasets.\n",
+    "# N.B. for datasets with snr of 25dB numerical results show that to reach convergence a a learning rate of 0.0001 should be used\n",
     "file_set = [\n",
     "            'Datasets/ITU_VEHICULAR_B_1000_210_16.67_72_5dB.npy',\n",
     "          'Datasets/ITU_VEHICULAR_B_1000_210_16.67_72_15dB.npy',\n",
