--- a/Delay_Blind_approach-Scenario_II.ipynb
+++ b/Delay_Blind_approach-Scenario_II.ipynb
@@ -15,7 +15,7 @@
     "**Note**: the training might take some hours, depending on the available computational resources, the dimension of the training set, the dimension of the network, and the number of epochs. \n",
     "\n",
     "\n",
-    "<a id='ourpaper'></a> [1] \"Wireless link adaptation - a hybrid data-driven and model-based approach\", Lissy Pellaco, Vidit Saxena, Mats Bengtsson, Joakim Jaldén. Submitted to WCNC 2020."
+    "<a id='ourpaper'></a> [1] \"Wireless link adaptation - a hybrid data-driven and model-based approach\", Lissy Pellaco, Vidit Saxena, Mats Bengtsson, Joakim Jaldén. Submitted to SPAWC 2020."
    ]
   },
   {
@@ -98,7 +98,7 @@
     "# The files stored in the file_set ARE NOT in the repository due to space limitations.\n",
     "# The training datasets can be found at: https://kth.box.com/s/tcd7y7rg3yau75kctw3regmyns8kfkr6 in the folder *Datasets*\n",
     "# The reader has also access to the \"radio_data/Generate_Data.ipynb\" which we used to generate the training datasets.\n",
-    "\n",
+    "# N.B. a small training set with new samples at snr of 5dB is added to boost the performance at low snr\n",
     "FADING_CHANNEL_DATAFILES = []\n",
     "\n",
     "FADING_CHANNEL_DATAFILES.append('Datasets/ITU_VEHICULAR_B_5000_30kmph.npy')\n",
@@ -107,14 +107,57 @@
     "FADING_CHANNEL_DATAFILES.append('Datasets/ITU_VEHICULAR_B_5000_75kmph.npy')\n",
     "FADING_CHANNEL_DATAFILES.append('Datasets/ITU_VEHICULAR_B_5000_90kmph.npy')\n",
     "FADING_CHANNEL_DATAFILES.append('Datasets/ITU_VEHICULAR_B_5000_105kmph.npy')\n",
-    "FADING_CHANNEL_DATAFILES.append('Datasets/ITU_VEHICULAR_B_5000_120kmph.npy')\n"
+    "FADING_CHANNEL_DATAFILES.append('Datasets/ITU_VEHICULAR_B_5000_120kmph.npy')\n",
+    "FADING_CHANNEL_DATAFILES.append('Datasets/ITU_VEHICULAR_B_350_60kmph.npy')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Build and Train the Neural Network"
+    "## Build the Neural Network model, define the optimizer, and the cost function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_ann_model():\n",
+    "    from keras.models import Sequential\n",
+    "    from keras.layers import Dense, Dropout\n",
+    "\n",
+    "    model = Sequential()\n",
+    "    model.add( Dense( 1024, \n",
+    "                      input_dim = NROF_SUBCARRIERS * 2, \n",
+    "                      kernel_initializer='normal', \n",
+    "                      activation='relu' ) )\n",
+    "\n",
+    "    model.add( Dense( 512, \n",
+    "                      kernel_initializer = 'normal', \n",
+    "                      activation='relu' ) )\n",
+    "        \n",
+    "    model.add( Dense( 1024, \n",
+    "                      kernel_initializer = 'normal', \n",
+    "                      activation='relu' ) )\n",
+    "    \n",
+    "    model.add( Dense( NROF_MCS, \n",
+    "                      kernel_initializer='normal', \n",
+    "                      activation='sigmoid' ) )\n",
+    "\n",
+    "    # Compile model\n",
+    "    adam = Adam(lr = 0.001, beta_1 = 0.9, beta_2 = 0.999, amsgrad = False)\n",
+    "    model.compile(loss = 'binary_crossentropy', optimizer = adam, metrics = ['accuracy'])  # for binary classification\n",
+    "    \n",
+    "    return model\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train the Neural Network"
    ]
   },
   {
@@ -126,8 +169,8 @@
     "channel_coeff  = []\n",
     "block_success  = []\n",
     "\n",
-    "# Extract training data from datasets\n",
-    "for file in FADING_CHANNEL_DATAFILES:\n",
+    "# Extract training data from all datasets, excluding the last one (used later)\n",
+    "for file in FADING_CHANNEL_DATAFILES[:-1]:\n",
     "    DATASET = np.load( file, allow_pickle = True )[()]\n",
     "    \n",
     "    nrof_train_samples = int( TRAINING_FRACTION * DATASET['channel'].shape[0] )\n",
@@ -157,35 +200,11 @@
     "sess = tf.Session( config = config )\n",
     "set_session(sess) \n",
     "\n",
-    "def create_ann_model():\n",
-    "    from keras.models import Sequential\n",
-    "    from keras.layers import Dense, Dropout\n",
-    "\n",
-    "    model = Sequential()\n",
-    "    model.add( Dense( 1024, \n",
-    "                      input_dim = NROF_SUBCARRIERS * 2, \n",
-    "                      kernel_initializer='normal', \n",
-    "                      activation='relu' ) )\n",
-    "\n",
-    "    model.add( Dense( 512, \n",
-    "                      kernel_initializer = 'normal', \n",
-    "                      activation='relu' ) )\n",
-    "        \n",
-    "    model.add( Dense( 1024, \n",
-    "                      kernel_initializer = 'normal', \n",
-    "                      activation='relu' ) )\n",
-    "    \n",
-    "    model.add( Dense( NROF_MCS, \n",
-    "                      kernel_initializer='normal', \n",
-    "                      activation='sigmoid' ) )\n",
-    "\n",
-    "    # Compile model\n",
-    "    adam = Adam(lr = 0.001, beta_1 = 0.9, beta_2 =0 .999, amsgrad = False)\n",
-    "    model.compile(loss = 'binary_crossentropy', optimizer = adam, metrics = ['accuracy'])  # for binary classification\n",
-    "    \n",
-    "    return model\n",
     "\n",
     "model = create_ann_model( )\n",
+    "\n",
+    "# Storing current time \n",
+    "start = time.time()\n",
     "\n",
     "history = model.fit( train_input, \n",
     "                     train_target, \n",
@@ -194,10 +213,48 @@
     "                     validation_split = 0.1, \n",
     "                     verbose    = 1 ) # the \"verbose parameter\" can be changed to display more about the training progess of each epoch\n",
     "\n",
+    "channel_coeff  = []\n",
+    "block_success  = []\n",
+    "\n",
+    "# Extract training data from last dataset\n",
+    "for file in [FADING_CHANNEL_DATAFILES[-1]]:\n",
+    "    DATASET = np.load( file, allow_pickle = True )[()]\n",
+    "    \n",
+    "    nrof_train_samples = int( TRAINING_FRACTION * DATASET['channel'].shape[0] )\n",
+    "    coeff = utils.calculate_channel_coefficients_scaled( DATASET['channel'][ :nrof_train_samples, :, : ],\n",
+    "                                                         DATASET['snrs_db'],\n",
+    "                                                         channel_estimation_noise = CHANNEL_EST_NOISE )\n",
+    "\n",
+    "    channel_coeff.append( coeff )\n",
+    "    block_success.append( DATASET['block_success'][ :nrof_train_samples, :, : ] )\n",
+    "    \n",
+    "channel_coeff = np.vstack( channel_coeff )\n",
+    "block_success = np.vstack( block_success )\n",
+    "\n",
+    "NROF_FRAMES, NROF_SUBCARRIERS, NROF_SNRS = channel_coeff.shape\n",
+    "NROF_MCS = block_success.shape[ 1 ]\n",
+    "\n",
+    "channel_coeff_concat = np.concatenate( ( np.real( channel_coeff ), np.imag( channel_coeff ) ), axis = 1 )\n",
+    "\n",
+    "train_input  = utils.flatten_snr_axis( channel_coeff_concat ) \n",
+    "train_target = utils.flatten_snr_axis( block_success )\n",
+    "\n",
+    "train_input, train_target = utils.shuffle_data( train_input, train_target )\n",
+    "# Additional training\n",
+    "history = model.fit( train_input, \n",
+    "                     train_target, \n",
+    "                     batch_size = BATCH_SIZE, \n",
+    "                     epochs     = NROF_EPOCHS, \n",
+    "                     validation_split = 0.1, \n",
+    "                     verbose    = 1 ) # the \"verbose parameter\" can be changed to display more about the training progess of each epoch\n",
+    "\n",
+    "\n",
     "file = 'Trained_models_ScenarioII/ANN_MCS_PRED.h5'\n",
+    "print(\"Training the neural network took:\",time.time()-start)\n",
     "if save_model == True:\n",
     "    model.save( file )\n",
     "    print( 'Saved model to %s'%( file ) )\n",
+    "    \n",
     "                                                   "
    ]
   }
