--- a/Hybrid_approach-Scenario_I.ipynb
+++ b/Hybrid_approach-Scenario_I.ipynb
@@ -6,7 +6,10 @@
    "source": [
     "# Hybrid Approach -- Scenario I\n",
     "\n",
-    "In this notebook, we report the code related to the *hybrid* appraoch in our paper [[1]](#ourpaper). We consider the delay caused by the feedback loop used by the mobile user equipment to send to the base station the channel state information (CSI). Due to this feedback delay, the CSI available at the base station becomes outdated. In our paper, we propose a hybrid *data-driven* and *model-based* approach. The model-based part consists of using a FIR Wiener filter to predict the instantaneous CSI given the channel history, which we assume available at the base station. The data-driven part consists of a neural network whose input is the output of the Wiener filter. Ths network maps the CSI to the probability of an error event for all the MCSs and selects the MCS that maximizes the spectral efficiency\n",
+    "In this notebook, we report the code related to the *hybrid* appraoch in our paper [[1]](#ourpaper). We consider the delay caused by the feedback loop used by the mobile user equipment to send to the base station the channel state information (CSI). Due to this feedback delay, the CSI available at the base station becomes outdated. In our paper, we propose a hybrid *data-driven* and *model-based* approach. The model-based part consists of using a FIR Wiener filter to predict the instantaneous CSI given the channel history, which we assume available at the base station. The data-driven part consists of a neural network whose input is the output of the Wiener filter. Ths network maps the CSI to the probability of an error event for all the MCSs and selects the MCS that maximizes the spectral efficiency.\n",
+    "\n",
+    "![Hybrid approach overall structure](figures/hybrid_structure.png)\n",
+    "*Overall hybrid approach. The past channel history $\\boldsymbol{\\psi}$ is used to optimally estimate, via Wiener filter, the channel in effect at transmission time. Then, the estimate $\\hat{\\boldsymbol{h}}$ is mapped by the Fully Connected Neural Network to the corresponding set of conditional error event probabilities, i.e., $\\hat{\\rho}_1,...,\\hat{\\rho}_K$, for each MCS available at the BS. The final step is the selection of the MCS which gives the maximum expected spectral efficiency.Each layer of the neural network is parameterized by a weight matrix $\\boldsymbol{W}$ and a bias vector $\\boldsymbol{b}$ such that the output of the $i^{th}$ layer, i.e., $\\boldsymbol{\\alpha}^{(i)}$, is given by $\\boldsymbol{\\alpha}^{(i)}=\\Phi^{(i)} ( \\boldsymbol{W}^{(i)}\\boldsymbol{\\alpha}^{(i-1)} + \\boldsymbol{b}^{(i)} )$ where $D_{i}$ is the dimension of the $i^{th}$ layer, where $\\Phi$ is a non-linear activation function applied element-wise, where $\\boldsymbol{W}^{(i)} \\in \\mathbb{R}^{D_{i}\\mathrm{x}(D_{i-1})}$ and where $\\boldsymbol{b} \\in \\mathbb{R}^{D_{i}}$.*\n",
     "\n",
     "Under Scenario I, we implement a different Wiener filter and we train a different neural network for each combination of delay, doppler, and signal-to-noise ratio.\n",
     "\n",
@@ -15,7 +18,7 @@
     "**Note**: the training might take some hours, depending on the available computational resources, the dimension of the training set, the dimension of the network, and the number of epochs. \n",
     "\n",
     "\n",
-    "<a id='ourpaper'></a> [1] \"Wireless link adaptation - a hybrid data-driven and model-based approach\", Lissy Pellaco, Vidit Saxena, Mats Bengtsson, Joakim Jaldén. Submitted to WCNC 2020."
+    "<a id='ourpaper'></a> [1] \"Wireless link adaptation - a hybrid data-driven and model-based approach\", Lissy Pellaco, Vidit Saxena, Mats Bengtsson, Joakim Jaldén. Submitted to SPAWC 2020."
    ]
   },
   {
@@ -103,7 +106,7 @@
     "# The files stored in the file_set ARE NOT in the repository due to space limitations.\n",
     "# The training datasets can be found at: https://kth.box.com/s/tcd7y7rg3yau75kctw3regmyns8kfkr6 in the folder *Datasets*\n",
     "# The reader has also access to the \"radio_data/Generate_Data.ipynb\" which we used to generate the training datasets.\n",
-    "\n",
+    "# N.B. for datasets with snr of 25dB numerical results show that to reach convergence a a learning rate of 0.0001 should be used\n",
     "file_set=[\n",
     "            'Datasets/ITU_VEHICULAR_B_1000_210_16.67_72_5dB.npy',\n",
     "          'Datasets/ITU_VEHICULAR_B_1000_210_16.67_72_15dB.npy',\n",
