--- a/Plotting_the_results-Scenario_I.ipynb
+++ b/Plotting_the_results-Scenario_I.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Due to storage limitations the **trained models** are currently not available in this repository. They **can be found at** https://kth.box.com/s/tcd7y7rg3yau75kctw3regmyns8kfkr6, under the folder *Trained_models_ScenarioI*. The test dataset can also be found at the same link, in the folder *Datasets*.\n",
     "\n",
-    "Instead of running the models, the reader can directly load the spectral efficiencies obtained by the three methods over the test datasets, by setting the parameter `load_from_memory` to `True`. This can be done for two test datasets with relative speeds of 60 km/h (16.67 m/s) and 120 km/h (33.33 m/s), by setting the parameter `relative_speed` to 16.67 or 33.33, respectively.\n",
+    "Instead of running the models, the reader can directly load the spectral efficiencies obtained by the three methods over the test datasets, by setting the parameter `load_from_memory` to `True`. \n",
     "\n",
     "The name of the trained neural network models are the following:\n",
     "\n",
@@ -18,11 +18,11 @@
     "- ANN_E2E_MCS_PRED_DELAY_X_DP_Y_SNR_Z for the case of the *E2E* approach\n",
     "- ANN_MCS_PRED_WIENER_DELAY_X_DP_Y_SNR_Z for the case of the *hybrid* appraoch\n",
     "\n",
-    "where X indicates the values of the delay, where Y indicates the doppler (cast to integer), and where Z indicates the SNR.\n",
+    "where X indicates the values of the delay, where Y indicates the relative user velocity, and where Z indicates the SNR.\n",
     "\n",
     "To give an example: ANN_MCS_PRED_WIENER_DELAY_1_DP_111_SNR_5\n",
     "\n",
-    "The relative velocity of 60 km/h (i.e. 16.67 m/s) corresponds to a doppler of 111.11 Hz (i.e. 111 if cast to integer) in our setup, given that the carrier frequency we work with is 2 GHz. Analogously, the relative velocity of 120 km/h (i.e. 33.33 m/s) corresponds to a doppler fo 222.22 Hz (i.e. 222 if cast to integer)."
+    "The relative velocity of 60 km/h (i.e. 16.67 m/s) corresponds to a doppler of 111.11 Hz (i.e. 111 if cast to integer) in our setup, given that the carrier frequency we work with is 2 GHz. "
    ]
   },
   {
@@ -101,20 +101,11 @@
     "mean_squared_error_with_prediction = []\n",
     "\n",
     "if load_from_memory == True:\n",
-    "    \n",
-    "    if relative_speed == 33.33:\n",
-    "        \n",
-    "        tput_DELAY_BLIND = np.load('Trained_models_ScenarioI_var/tput_DELAY-BLIND_sc_I_222.npy')\n",
-    "        tput_HYBRID = np.load('Trained_models_ScenarioI_var/tput_HYBRID_sc_I_222.npy')\n",
-    "        tput_E2E = np.load('Trained_models_ScenarioI_var/tput_E2E_sc_I_222.npy')\n",
-    "        mean_squared_error_with_prediction = np.load('Trained_models_ScenarioI_var/MSE_sc_I_222.npy')\n",
-    "        \n",
-    "    if relative_speed == 16.67:\n",
-    "        \n",
-    "        tput_DELAY_BLIND = np.load('Trained_models_ScenarioI_var/tput_DELAY-BLIND_sc_I_111.npy')\n",
-    "        tput_HYBRID = np.load('Trained_models_ScenarioI_var/tput_HYBRID_sc_I_111.npy')\n",
-    "        tput_E2E = np.load('Trained_models_ScenarioI_var/tput_E2E_sc_I_111.npy')\n",
-    "        mean_squared_error_with_prediction = np.load('Trained_models_ScenarioI_var/MSE_sc_I_111.npy')\n",
+    "      \n",
+    "    tput_DELAY_BLIND = np.load('Trained_models_ScenarioI_var/tput_DELAY-BLIND_sc_I_111.npy')\n",
+    "    tput_HYBRID = np.load('Trained_models_ScenarioI_var/tput_HYBRID_sc_I_111.npy')\n",
+    "    tput_E2E = np.load('Trained_models_ScenarioI_var/tput_E2E_sc_I_111.npy')\n",
+    "    mean_squared_error_with_prediction = np.load('Trained_models_ScenarioI_var/MSE_sc_I_111.npy')\n",
     "    \n",
     "else:\n",
     "    for DELAY in range( 0, maximum_delay + 1):\n",
