--- a/E2E_approach-Scenario_II.ipynb
+++ b/E2E_approach-Scenario_II.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "**Note**: the training might take some hours, depending on the available computational resources, the dimension of the training set, the dimension of the network, and the number of epochs. \n",
     "\n",
-    "<a id='ourpaper'></a> [1] \"Wireless link adaptation - a hybrid data-driven and model-based approach\", Lissy Pellaco, Vidit Saxena, Mats Bengtsson, Joakim Jaldén. Submitted to WCNC 2020."
+    "<a id='ourpaper'></a> [1] \"Wireless link adaptation - a hybrid data-driven and model-based approach\", Lissy Pellaco, Vidit Saxena, Mats Bengtsson, Joakim Jaldén. Submitted to SPAWC 2020."
    ]
   },
   {
@@ -99,7 +99,7 @@
     "# The files stored in the file_set ARE NOT in the repository due to space limitations.\n",
     "# The training datasets can be found at: https://kth.box.com/s/tcd7y7rg3yau75kctw3regmyns8kfkr6 in the folder *Datasets*\n",
     "# The reader has also access to the \"radio_data/Generate_Data.ipynb\" which we used to generate the training datasets.\n",
-    "\n",
+    "# N.B. a small training set with new samples at snr of 5dB is added to boost the performance at low snr\n",
     "FADING_CHANNEL_DATAFILES = []\n",
     "\n",
     "FADING_CHANNEL_DATAFILES.append('Datasets/ITU_VEHICULAR_B_5000_30kmph.npy')\n",
@@ -202,13 +202,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = tf.ConfigProto()\n",
-    "config.gpu_options.allow_growth = True  \n",
-    "\n",
-    "sess = tf.Session( config = config )\n",
-    "set_session(sess) \n",
-    "\n",
     "for delay in range(0,maximum_delay + 1):\n",
+    "    \n",
+    "    channel_coeff  = []\n",
+    "    block_success  = []\n",
+    "\n",
+    "    # Extract training data from all datasets, excluding the last one (used later)\n",
+    "    for file in FADING_CHANNEL_DATAFILES[:-1]:\n",
+    "        DATASET = np.load( file, allow_pickle = True )[()]\n",
+    "\n",
+    "        nrof_train_samples = int( TRAINING_FRACTION * DATASET['channel'].shape[0] )\n",
+    "        coeff = utils.calculate_channel_coefficients_scaled( DATASET['channel'][ :nrof_train_samples, :, : ],\n",
+    "                                                             DATASET['snrs_db'],\n",
+    "                                                             channel_estimation_noise = CHANNEL_EST_NOISE )\n",
+    "\n",
+    "        channel_coeff.append( coeff )\n",
+    "        block_success.append( DATASET['block_success'][ :nrof_train_samples, :, : ] )\n",
+    "    \n",
+    "    channel_coeff = np.vstack( channel_coeff )\n",
+    "    block_success = np.vstack( block_success )\n",
+    "\n",
+    "    NROF_FRAMES, NROF_SUBCARRIERS, NROF_SNRS = channel_coeff.shape\n",
+    "    NROF_MCS = block_success.shape[ 1 ]\n",
+    "\n",
+    "    channel_coeff_concat = np.concatenate( ( np.real( channel_coeff ), np.imag( channel_coeff ) ), axis = 1 )\n",
+    "\n",
+    "    config = tf.ConfigProto()\n",
+    "    config.gpu_options.allow_growth = True  \n",
+    "\n",
+    "    sess = tf.Session( config = config )\n",
+    "    set_session(sess) \n",
     "    if delay > 0:\n",
     "        train_input  = utils.flatten_snr_axis( channel_coeff_concat[ :-delay, :, :] )\n",
     "    else:\n",
@@ -219,6 +242,9 @@
     "    train_input, train_target = utils.shuffle_data( train_input, train_target )\n",
     "\n",
     "    model = create_ann_model( )\n",
+    "    \n",
+    "    # Storing current time \n",
+    "    start = time.time()\n",
     "\n",
     "    history = model.fit( utils.stack_features( train_input, ANN_MEMORY ), \n",
     "                         train_target, \n",
@@ -226,14 +252,49 @@
     "                         epochs     = NROF_EPOCS, \n",
     "                         validation_split = 0.1, \n",
     "                         verbose    = 1 ) # the \"verbose parameter\" can be changed to display more about the training progess of each epoch\n",
+    "    channel_coeff  = []\n",
+    "    block_success  = []\n",
     "\n",
-    "    # Save the trained model\n",
+    "    # Extract training data from last dataset\n",
+    "    for file in [FADING_CHANNEL_DATAFILES[-1]]:\n",
+    "        DATASET = np.load( file, allow_pickle = True )[()]\n",
+    "\n",
+    "        nrof_train_samples = int( TRAINING_FRACTION * DATASET['channel'].shape[0] )\n",
+    "        coeff = utils.calculate_channel_coefficients_scaled( DATASET['channel'][ :nrof_train_samples, :, : ],\n",
+    "                                                             DATASET['snrs_db'],\n",
+    "                                                             channel_estimation_noise = CHANNEL_EST_NOISE )\n",
+    "\n",
+    "        channel_coeff.append( coeff )\n",
+    "        block_success.append( DATASET['block_success'][ :nrof_train_samples, :, : ] )\n",
+    "    \n",
+    "    channel_coeff = np.vstack( channel_coeff )\n",
+    "    block_success = np.vstack( block_success )\n",
+    "\n",
+    "    channel_coeff_concat = np.concatenate( ( np.real( channel_coeff ), np.imag( channel_coeff ) ), axis = 1 )\n",
+    "\n",
+    "    if delay > 0:\n",
+    "        train_input  = utils.flatten_snr_axis( channel_coeff_concat[ :-delay, :, :] )\n",
+    "    else:\n",
+    "        train_input  = utils.flatten_snr_axis( channel_coeff_concat )\n",
+    "\n",
+    "    train_target = utils.flatten_snr_axis( block_success [ delay :, :, : ] )\n",
+    "\n",
+    "    train_input, train_target = utils.shuffle_data( train_input, train_target )\n",
+    "    \n",
+    "    # Additional training\n",
+    "    history = model.fit( utils.stack_features( train_input, ANN_MEMORY ), \n",
+    "                         train_target, \n",
+    "                         batch_size = BATCH_SIZE, \n",
+    "                         epochs     = NROF_EPOCS, \n",
+    "                         validation_split = 0.1, \n",
+    "                         verbose    = 1 ) # the \"verbose parameter\" can be changed to display more about the training progess of each epoch\n",
+    "\n",
+    "        \n",
     "    file = 'Trained_models_ScenarioII/ANN_E2E_MCS_PRED_DELAY_%d_MEM_10_SNR.h5'%( delay )\n",
+    "    print(\"Training the neural network took:\",time.time()-start)\n",
     "    if save_model == True:\n",
     "        model.save( file )\n",
-    "        print( 'Saved model to %s'%( file ) )\n",
-    "    \n",
-    "    clear_session( )"
+    "        print( 'Saved model to %s'%( file ) )\n"
    ]
   }
  ],
