--- a/Hybrid_approach-Scenario_II.ipynb
+++ b/Hybrid_approach-Scenario_II.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "# Hybrid Approach -- Scenario II\n",
     "\n",
-    "In this notebook, we report the code related to the *hybrid* appraoch in our paper [[1]](#ourpaper). We consider the delay caused by the feedback loop used by the mobile user equipment to send to the base station the channel state information (CSI). Due to this feedback delay, the CSI available at the base station becomes outdated. In our paper, we propose a hybrid *data-driven* and *model-based* approach. The model-based part consists of using a FIR Wiener filter to predict the instantaneous CSI given the channel history, which we assume available at the base station. The data-driven part consists of a neural network whose input is the output of the Wiener filter. Ths network maps the CSI to the probability of an error event for all the MCSs and selects the MCS that maximizes the spectral efficiency\n",
+    "In this notebook, we report the code related to the *hybrid* appraoch in our paper [[1]](#ourpaper). We consider the delay caused by the feedback loop used by the mobile user equipment to send to the base station the channel state information (CSI). Due to this feedback delay, the CSI available at the base station becomes outdated. In our paper, we propose a hybrid *data-driven* and *model-based* approach. The model-based part consists of using a FIR Wiener filter to predict the instantaneous CSI given the channel history, which we assume available at the base station. The data-driven part consists of a neural network whose input is the output of the Wiener filter. Ths network maps the CSI to the probability of an error event for all the MCSs and selects the MCS that maximizes the spectral efficiency.\n",
+    "\n",
+    "![Hybrid approach overall structure](figures/hybrid_structure.png)\n",
+    "*Overall hybrid approach. The past channel history $\\boldsymbol{\\psi}$ is used to optimally estimate, via Wiener filter, the channel in effect at transmission time. Then, the estimate $\\hat{\\boldsymbol{h}}$ is mapped by the Fully Connected Neural Network to the corresponding set of conditional error event probabilities, i.e., $\\hat{\\rho}_1,...,\\hat{\\rho}_K$, for each MCS available at the BS. The final step is the selection of the MCS which gives the maximum expected spectral efficiency.Each layer of the neural network is parameterized by a weight matrix $\\boldsymbol{W}$ and a bias vector $\\boldsymbol{b}$ such that the output of the $i^{th}$ layer, i.e., $\\boldsymbol{\\alpha}^{(i)}$, is given by $\\boldsymbol{\\alpha}^{(i)}=\\Phi^{(i)} ( \\boldsymbol{W}^{(i)}\\boldsymbol{\\alpha}^{(i-1)} + \\boldsymbol{b}^{(i)} )$ where $D_{i}$ is the dimension of the $i^{th}$ layer, where $\\Phi$ is a non-linear activation function applied element-wise, where $\\boldsymbol{W}^{(i)} \\in \\mathbb{R}^{D_{i}\\mathrm{x}(D_{i-1})}$ and where $\\boldsymbol{b} \\in \\mathbb{R}^{D_{i}}$.*\n",
+    "\n",
     "\n",
     "Under Scenario II, we implement a different Wiener filter for each delay, but we design it to work on the full range of dopplers and signal-to-noise ratios. We then build a different neural netwok for each of Wiener's outputs and we train each neural network on the full range of dopplers and signal-to-noise ratios.\n",
     "\n",
@@ -15,7 +19,7 @@
     "**Note**: the training might take some hours, depending on the available computational resources, the dimension of the training set, the dimension of the network, and the number of epochs. \n",
     "\n",
     "\n",
-    "<a id='ourpaper'></a> [1] \"Wireless link adaptation - a hybrid data-driven and model-based approach\", Lissy Pellaco, Vidit Saxena, Mats Bengtsson, Joakim Jaldén. Submitted to WCNC 2020."
+    "<a id='ourpaper'></a> [1] \"Wireless link adaptation - a hybrid data-driven and model-based approach\", Lissy Pellaco, Vidit Saxena, Mats Bengtsson, Joakim Jaldén. Submitted to SPAWC 2020."
    ]
   },
   {
@@ -96,8 +100,8 @@
     "# The files stored in the file_set ARE NOT in the repository due to space limitations.\n",
     "# The training datasets can be found at: https://kth.box.com/s/tcd7y7rg3yau75kctw3regmyns8kfkr6 in the folder *Datasets*\n",
     "# The reader has also access to the \"radio_data/Generate_Data.ipynb\" which we used to generate the training datasets.\n",
-    "\n",
-    "FADING_CHANNEL_DATAFILES = []\n",
+    "# N.B. a small training set with new samples at snr of 5dB is added to boost the performance at low snr\n",
+    "FFADING_CHANNEL_DATAFILES = []\n",
     "\n",
     "FADING_CHANNEL_DATAFILES.append('Datasets/ITU_VEHICULAR_B_5000_30kmph.npy')\n",
     "FADING_CHANNEL_DATAFILES.append('Datasets/ITU_VEHICULAR_B_5000_45kmph.npy')\n",
@@ -106,6 +110,7 @@
     "FADING_CHANNEL_DATAFILES.append('Datasets/ITU_VEHICULAR_B_5000_90kmph.npy')\n",
     "FADING_CHANNEL_DATAFILES.append('Datasets/ITU_VEHICULAR_B_5000_105kmph.npy')\n",
     "FADING_CHANNEL_DATAFILES.append('Datasets/ITU_VEHICULAR_B_5000_120kmph.npy')\n",
+    "FADING_CHANNEL_DATAFILES.append('Datasets/ITU_VEHICULAR_B_350_60kmph.npy')\n",
     "\n",
     "# Doppler frequency related to the datasets in \"file_set\"\n",
     "dopplers_set = (20.0 / 3.0) * np.array([8.3,12.5,16.67,20.83,25,29.16,33.33])\n",
@@ -115,7 +120,7 @@
     "\n",
     "# Snrs range that we consider  \n",
     "snrs_set = np.array(range(0,30))\n",
-    "# Snrs range that we consider in dB \n",
+    "# Snrs range that we consider in dB (we can load them from any dataset)\n",
     "snrs_dB = (np.load( 'Datasets/ITU_VEHICULAR_B_5000_30kmph.npy', allow_pickle = True )[()])['snrs_db']\n",
     "\n",
     "channel_sampling_interval = 0.001\n",
@@ -215,6 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "for DELAY in range(0, maximum_delay + 1):\n",
     "\n",
     "    Wiener_coeff=np.zeros(Wiener_filter_taps)\n",
@@ -252,7 +258,7 @@
     "    block_success  = []\n",
     "\n",
     "    # Extract training data from datasets\n",
-    "    for file_index, file in enumerate( FADING_CHANNEL_DATAFILES ):\n",
+    "    for file_index, file in enumerate( FADING_CHANNEL_DATAFILES[:-1] ):\n",
     "        DATASET = np.load( file, allow_pickle = True )[()]\n",
     "\n",
     "        nrof_train_samples = int( TRAINING_FRACTION * DATASET['channel'].shape[0] )\n",
@@ -294,7 +300,10 @@
     "\n",
     "    \n",
     "    model = create_ann_model(NROF_SUBCARRIERS, NROF_MCS)\n",
-    "\n",
+    "    \n",
+    "    # Storing current time \n",
+    "    start = time.time()\n",
+    "    \n",
     "    history = model.fit( train_input, \n",
     "                         train_target, \n",
     "                         batch_size = BATCH_SIZE, \n",
@@ -302,6 +311,52 @@
     "                         validation_split = 0.1, \n",
     "                         verbose    = 1 ) # the \"verbose parameter\" can be changed to display more about the training progess of each epoch\n",
     "\n",
+    "    channel_coeff  = []\n",
+    "    block_success  = []\n",
+    "    # Extract training data the last dataset\n",
+    "    for file_index, file in enumerate( [FADING_CHANNEL_DATAFILES[-1]] ):\n",
+    " \n",
+    "        DATASET = np.load( file, allow_pickle = True )[()]\n",
+    "\n",
+    "        nrof_train_samples = int( TRAINING_FRACTION * DATASET['channel'].shape[0] )\n",
+    "        \n",
+    "        coeff = utils.calculate_channel_coefficients_scaled( DATASET['channel'][ :nrof_train_samples, :, : ],\n",
+    "                                                         DATASET['snrs_db'],\n",
+    "                                                         channel_estimation_noise = CHANNEL_EST_NOISE )\n",
+    "\n",
+    "        coeff_filtered = apply_wiener_filtering_average( Wiener_coeff,coeff, \n",
+    "                                             DATASET[ 'snrs_db' ], \n",
+    "                                             doppler_freq = dopplers_set[file_index], \n",
+    "                                             delay = DELAY, \n",
+    "                                             N = 10 )\n",
+    "\n",
+    "        channel_coeff.append( coeff_filtered )\n",
+    "        block_success.append( DATASET['block_success'][ :nrof_train_samples, :, : ] )      \n",
+    "    \n",
+    "  \n",
+    "    channel_coeff = np.vstack( channel_coeff )\n",
+    "    block_success = np.vstack( block_success )\n",
+    "\n",
+    "\n",
+    "    channel_coeff_concat = np.concatenate( ( np.real( channel_coeff ), np.imag( channel_coeff ) ), axis = 1 )\n",
+    "    if DELAY > 0:\n",
+    "        train_input  = utils.flatten_snr_axis( channel_coeff_concat[ :-DELAY, :, : ] )\n",
+    "    else:\n",
+    "        train_input  = utils.flatten_snr_axis( channel_coeff_concat )\n",
+    "\n",
+    "    train_target = utils.flatten_snr_axis( block_success [ DELAY :, :, : ] )\n",
+    "\n",
+    "    train_input, train_target = utils.shuffle_data( train_input, train_target )\n",
+    "\n",
+    "    # Additional training\n",
+    "    history = model.fit( train_input, \n",
+    "                         train_target, \n",
+    "                         batch_size = BATCH_SIZE, \n",
+    "                         epochs     = NROF_EPOCHS, \n",
+    "                         validation_split = 0.1, \n",
+    "                         verbose    = 1 ) # the \"verbose parameter\" can be changed to display more about the training progess of each epoch\n",
+    "\n",
+    "    print(\"Training the neural network took:\",time.time()-start)\n",
     "    file = 'Trained_models_ScenarioII/ANN_MCS_PRED_WIENER_FILT_COEFF_AVERAGE_DELAY_%d.h5'%(DELAY)\n",
     "    if save_model == True:\n",
     "        model.save( file )\n",
